--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -29,3 +29,17 @@
 .alert:empty {
   display: none;
 }
+
+html, body {
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+#renderCanvas {
+    width: 100%;
+    height: 100%;
+    touch-action: none;
+}
