--- a/lib/babylon_phoenix_web/templates/layout/app.html.eex
+++ b/lib/babylon_phoenix_web/templates/layout/app.html.eex
@@ -7,12 +7,17 @@
     <title>BabylonPhoenix · Phoenix Framework</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
     <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
+
   </head>
   <body>
     <main role="main" class="container">
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+      <canvas id="renderCanvas" touch-action="none"></canvas>
       <%= @inner_content %>
+
+
     </main>
+
   </body>
 </html>
