add room supervisor

--- a/lib/babylon_phoenix_web/templates/layout/app.html.eex
+++ b/lib/babylon_phoenix_web/templates/layout/app.html.eex
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>BabylonPhoenix · Phoenix Framework</title>
+    <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
 
@@ -27,7 +28,7 @@
             <% end %>
           </ul>
         </nav>
-        <h1>Babylon Phoenix</h1>
+        <h1>VR Rooms</h1>
       </section>
     </header
 
