--- a/lib/babylon_phoenix_web/templates/room/show.html.eex
+++ b/lib/babylon_phoenix_web/templates/room/show.html.eex
@@ -1,2 +1,2 @@
-<script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
+<h2>Room</h2>
 <canvas id="renderCanvas" touch-action="none"></canvas>
